--- a/syllabus.html
+++ b/syllabus.html
@@ -401,6 +401,10 @@ in the packet of information that was given to you at the departmental orientati
 your first quarter as a student. Be sure to view the
 <a href="main_files/DISASTER_DRILL_PROCEDURE.doc">disaster drill</a> information.</p>
 
+<p><a href = "./files/Revised-Medical-Certification-010621.pdf">Medical-Certification</a></p>
+
+<p><a href = "./files/Syllabus_Quiz.docx">Syllabus Quiz</a></p>
+	
 <p><mark>Syllabus is subject to change without notice!</mark></p>
 <p>&nbsp;</p>
 </main>	
