--- a/home.html
+++ b/home.html
@@ -24,12 +24,12 @@
 <main>		
 <h2 style="text-align: center;">Instructor: Paul Long</h2>
 	<p>&nbsp;</p>
-<h2 style="text-align: center;">Office: Parker Nellis, Room 116</h2>
+<h2 style="text-align: center;">Office:</h2>
 	<p>&nbsp;</p>
-<h2 style="text-align: center;">E-mail: <a href="mailto:plong@ngtcollege.org">
+<h2 style="text-align: center;">E-mail: <a href="mailto:paul.long@northgateh.edu">
         plong@northgatech.edu</a> </h2>
 	<p>&nbsp;</p>
-<h2 style="text-align: center;">Phone: 706-754-7745 </h2>	
+<h2 style="text-align: center;">Phone:</h2>	
 <p>&nbsp;</p>	
 </main>
 
