--- a/Project.html
+++ b/Project.html
@@ -77,7 +77,7 @@
 		an example of this assignment.</a></p>	
 	<p><a href="files/Course_Project_Rubric.docx">Link to 
 		the Rubric for this assignment.</a></p>
-	<p><a href="files/Reflective%20Statement.docx">Link to 
+	<p><a href="files/Reflective_Statement.docx">Link to 
 		the Reflective Statement for this assignment.</a></p>
 </main>
 
