--- a/Project.html
+++ b/Project.html
@@ -82,7 +82,7 @@
 </main>
 
 <footer>	
-<small><i>&copy; 2018 PLong Heavy Industries</i><small>
+<small><i>&copy; 2021 Fox-Long Heavy Industries</i><small>
 </footer>
 	
 </body>
