--- a/home.html
+++ b/home.html
@@ -34,7 +34,7 @@
 </main>
 
 <footer>	
-<small><i>&copy; 2019 PLong Heavy Industries</i><small>
+<small><i>&copy; 2021 Fox-Long Heavy Industries</i><small>
 </footer>
 </body> 
 </html>
