--- a/Homework.html
+++ b/Homework.html
@@ -15,13 +15,17 @@
 </header>
 
 <nav>
-<p style="text-align: center;"><a href="./home.html">Home</a> &nbsp; 
-<a href="./syllabus.html">Syllabus</a> &nbsp; <a href="./schedule.html">Schedule</a> &nbsp; 
-<a href="./Homework.html">Homework</a> &nbsp; <a href="./Tests.html">Tests</a> &nbsp; 
-<a href="./Portfolio.html">Portfolio</a> &nbsp; <a href="./Project.html">Project</a> &nbsp; 
+<p style="text-align: center;">
+<a href="./home.html">Home</a> &nbsp; 
+<a href="./syllabus.html">Syllabus</a> &nbsp; 
+<a href="./schedule.html">Schedule</a> &nbsp; 
+<a href="./Homework.html">Homework</a> &nbsp; 
+<a href="./Tests.html">Tests</a> &nbsp; 
+<a href="./Portfolio.html">Portfolio</a> &nbsp; 
+<a href="./Project.html">Project</a> &nbsp; 
 <a href="./Links.html">Links</a></p>
 </nav>
-
+	
 <main>
 <br>
 <br>
@@ -46,7 +50,7 @@
 </main>
 	
 <footer>	
-<small><i>&copy; 2018 PLong Heavy Industries</i><small>
+<p style="text-align: center;"><i>&copy; 2021 Fox-Long Heavy Industries</i></p>
 </footer>
 
 </body>
