--- a/portfolio.html
+++ b/portfolio.html
@@ -15,11 +15,15 @@
 </header>
 
 <nav>
-<p style="text-align: center;"><a href="./home.html">Home</a> &nbsp; 
-<a href="./syllabus.html">Syllabus</a> &nbsp; <a href="./schedule.html">Schedule</a> &nbsp; 
-<a href="./Homework.html">Homework</a> &nbsp; <a href="./Tests.html">Tests</a> &nbsp; 
-<a href="./Portfolio.html">Portfolio</a> &nbsp; <a href="./Project.html">Project</a> &nbsp; 
-<a href="./Links.html">Links</a></p>
+<<p style="text-align: center;">
+<a href="./home.html">Home</a> &nbsp; 
+<a href="./syllabus.html">Syllabus</a> &nbsp; 
+<a href="./schedule.html">Schedule</a> &nbsp; 
+<a href="./Homework.html">Homework</a> &nbsp; 
+<a href="./Tests.html">Tests</a> &nbsp; 
+<a href="./Portfolio.html">Portfolio</a> &nbsp; 
+<a href="./Project.html">Project</a> &nbsp; 
+<a href="./Links.html">Links</a></p></p>
 </nav>
 			
 <main>
@@ -65,7 +69,7 @@
 </main>
 
 <footer>	
-<small><i>&copy; 2018 PLong Heavy Industries</i><small>
+<small><i>&copy; 2021 Fox-Long Heavy Industries</i><small>
 </footer>
 		
 </body>
