--- a/Project.html
+++ b/Project.html
@@ -15,10 +15,14 @@
 </header>
 
 <nav>
-<p style="text-align: center;"><a href="./home.html">Home</a> &nbsp; 
-<a href="./syllabus.html">Syllabus</a> &nbsp; <a href="./schedule.html">Schedule</a> &nbsp; 
-<a href="./Homework.html">Homework</a> &nbsp; <a href="./Tests.html">Tests</a> &nbsp; 
-<a href="./Portfolio.html">Portfolio</a> &nbsp; <a href="./Project.html">Project</a> &nbsp; 
+<p style="text-align: center;">
+<a href="./home.html">Home</a> &nbsp; 
+<a href="./syllabus.html">Syllabus</a> &nbsp; 
+<a href="./schedule.html">Schedule</a> &nbsp; 
+<a href="./Homework.html">Homework</a> &nbsp; 
+<a href="./Tests.html">Tests</a> &nbsp; 
+<a href="./Portfolio.html">Portfolio</a> &nbsp; 
+<a href="./Project.html">Project</a> &nbsp; 
 <a href="./Links.html">Links</a></p>
 </nav>
 			
