--- a/Project.html
+++ b/Project.html
@@ -11,7 +11,7 @@
 <body>
 
 <header>
-<h1 style="text-align: center;">Homework for CIST 1510</h1>
+<h1 style="text-align: center;">Project for CIST 1510</h1>
 </header>
 
 <nav>
@@ -86,7 +86,7 @@
 </main>
 
 <footer>	
-<small><i>&copy; 2021 Fox-Long Heavy Industries</i><small>
+<p style="text-align: center;"><i>&copy; 2021 Fox-Long Heavy Industries</i></p>
 </footer>
 	
 </body>
