--- a/links.html
+++ b/links.html
@@ -55,7 +55,7 @@ p {
   <td>
 <h2 style="text-align: center; font-size:20px; background-color: #AEAED4; color: #191970;">
 	Here are some useful links for CIST 1510</h2>
-	 <p><a href ="./html_template_2.html">Template</a>
+	<p><a href ="./html_template_2.html">Template</a></p>
 	<p><a href="main_files/Guidelines%20for%20Student%20Success.doc">Gudielines for student success</a></p>
 	<p><a href="main_files/Preparing%20for%20and%20Taking%20Exams.doc">Preparing for and taking exams</a></p>
 	<p><a href="main_files/Taking%20Effective%20Notes.doc">Taking effective notes</a></p>
