--- a/links.html
+++ b/links.html
@@ -42,11 +42,15 @@ p {
 </header>
 
 <nav>
-<p style="text-align: center;"><a href="./home.html">Home</a> &nbsp; 
-<a href="./syllabus.html">Syllabus</a> &nbsp; <a href="./schedule.html">Schedule</a> &nbsp; 
-<a href="./Homework.html">Homework</a> &nbsp; <a href="./Tests.html">Tests</a> &nbsp; 
-<a href="./Portfolio.html">Portfolio</a> &nbsp; <a href="./Project.html">Project</a> &nbsp; 
-<a href="./Links.html">Links</a></p>
+<<p style="text-align: center;">
+<a href="./home.html">Home</a> &nbsp; 
+<a href="./syllabus.html">Syllabus</a> &nbsp; 
+<a href="./schedule.html">Schedule</a> &nbsp; 
+<a href="./Homework.html">Homework</a> &nbsp; 
+<a href="./Tests.html">Tests</a> &nbsp; 
+<a href="./Portfolio.html">Portfolio</a> &nbsp; 
+<a href="./Project.html">Project</a> &nbsp; 
+<a href="./Links.html">Links</a></p></p>
 </nav>
 			
 <main>
@@ -55,7 +59,7 @@ p {
   <td>
 <h2 style="text-align: center; font-size:20px; background-color: #AEAED4; color: #191970;">
 	Here are some useful links for CIST 1510</h2>
-	<p><a href ="./html_template_2.html">Template</a></p>
+	<p><a href = "./html_template_2.html">Template</a></p>
 	<p><a href="main_files/Guidelines%20for%20Student%20Success.doc">Gudielines for student success</a></p>
 	<p><a href="main_files/Preparing%20for%20and%20Taking%20Exams.doc">Preparing for and taking exams</a></p>
 	<p><a href="main_files/Taking%20Effective%20Notes.doc">Taking effective notes</a></p>
@@ -110,7 +114,7 @@ p {
 </main>
 
 <footer>	
-<small><i>&copy; 2018 PLong Heavy Industries</i><small>
+<small><i>&copy; 2021 Fox-Long Heavy Industries</i><small>
 </footer>
 
 </body>
