--- a/Project.html
+++ b/Project.html
@@ -86,7 +86,7 @@
 </main>
 
 <footer>	
-<p style="text-align: center;"><i>&copy; 2021 Fox-Long Heavy Industries</i></p>
+<small><i>&copy; 2021 Fox-Long Heavy Industries</i><small>
 </footer>
 	
 </body>
