--- a/Tests.html
+++ b/Tests.html
@@ -50,7 +50,7 @@
 </main>
 
 <footer>	
-<small><i>&copy; 2021 Fox-Long Heavy Industries</i><small>
+<p style="text-align: center;"><i>&copy; 2021 Fox-Long Heavy Industries</i><p>
 </footer>
 
 </body>
