--- a/links.html
+++ b/links.html
@@ -42,7 +42,7 @@ p {
 </header>
 
 <nav>
-<<p style="text-align: center;">
+<p style="text-align: center;">
 <a href="./home.html">Home</a> &nbsp; 
 <a href="./syllabus.html">Syllabus</a> &nbsp; 
 <a href="./schedule.html">Schedule</a> &nbsp; 
@@ -59,7 +59,14 @@ p {
   <td>
 <h2 style="text-align: center; font-size:20px; background-color: #AEAED4; color: #191970;">
 	Here are some useful links for CIST 1510</h2>
+	<p><a href = "./notes_1510.docx">Notes for class</a></p>
 	<p><a href = "./html_template_2.html">Template</a></p>
+	<p><a href = "https://www.image-map.net/">Image Map Generator</a></p>
+	<p><a href = "https://validator.w3.org/">HTML Validator</a></p>
+	<p><a href="http://jigsaw.w3.org/css-validator/">CSS Validator </a></p>
+	<p><a href = "http://achecker.ca/checker/index.php">Web Accessibility Checker</a></p>
+	<p><a href="http://w3schools.com/">W3Schools &#45; Home Page</a></p>
+	<hr>
 	<p><a href="main_files/Guidelines%20for%20Student%20Success.doc">Gudielines for student success</a></p>
 	<p><a href="main_files/Preparing%20for%20and%20Taking%20Exams.doc">Preparing for and taking exams</a></p>
 	<p><a href="main_files/Taking%20Effective%20Notes.doc">Taking effective notes</a></p>
@@ -82,7 +89,7 @@ p {
 <h4 style="text-align:left; margin-left:25px; font-size:12px; color: #191970; background-color: #E6E6FA;"><strong>Other Sources</strong></h4>
 		<ul>
 			<li><a href="http://www.computeruser.com/resources/dictionary/index.html">High-Tech Dictionary</a></li>
-			<li><a href="http://www.webdevfoundations.net">Textbook companion website</a> - Lots of stuff</li>
+			<li><a href="http://www.webdevfoundations.net">Old textbook companion website</a> - Lots of stuff</li>
 			<li><a href="http://www.nvcc.edu/home/tgutnick/itd110/tools.html">Tools</a> - Lots of valuable resourses</li>
 			<li><a href="http://www.w3.org/QA/Tools/">W3C Quality Assurance Tools</a> - Very handy tools for web pages</li>
 			<li><a href="http://www.inmotionhosting.com/infographics/_img/html5_cheat_sheet_tags.png">HTML5 cheatsheet</a></li>
@@ -92,12 +99,8 @@ p {
 			<li><a href="http://download.cnet.com/Notepad-Portable/3000-2352_4-10834948.html">
 				Notepad&#43;&#43; Portable &#45; Download from c&#45;net</a></li>
 			<li><a href="files/Notepad++Portable/help.html">Notepad&#43;&#43; Portable Help</a></li>
-			<li><a href="http://jigsaw.w3.org/css-validator/">CSS Validator </a></li>
-			<li><a href="http://validator.w3.org/">W3C Markup Validator (for HTML5)</a></li>
-			<li><a href="http://achecker.ca/checker/index.php">Web Accessibility Checker</a></li>
 			<li><a href="http://www.w3schools.com/tags/ref_ascii.asp">HTML ASCII Character Reference</a></li>
 			<li><a href="http://www.w3schools.com/tags/ref_colorpicker.asp">HTML Color Picker</a></li>
-			<li><a href="http://w3schools.com/">W3Schools &#45; Home Page</a></li>
 			<li><a href="http://css-tricks.com/snippets/css/media-queries-for-standard-devices/">CSS Tricks</a></li>
 			<li><a href="http://channel9.msdn.com/Series/HTML5-CSS3-Fundamentals-Development-for-Absolute-Beginners">
 				HTML5 &#38; CSS Fundamentals </a></li>
