--- a/home.html
+++ b/home.html
@@ -27,7 +27,7 @@
 <h2 style="text-align: center;">Office:</h2>
 	<p>&nbsp;</p>
 <h2 style="text-align: center;">E-mail: <a href="mailto:paul.long@northgateh.edu">
-        plong@northgatech.edu</a> </h2>
+        paul.long@northgatech.edu</a> </h2>
 	<p>&nbsp;</p>
 <h2 style="text-align: center;">Phone:</h2>	
 <p>&nbsp;</p>	
