--- a/Project.html
+++ b/Project.html
@@ -86,7 +86,7 @@
 </main>
 
 <footer>	
-<small><i>&copy; 2021 Fox-Long Heavy Industries</i><small>
+<p><i>&copy; 2021 Fox-Long Heavy Industries</i></p>
 </footer>
 	
 </body>
