--- a/schedule.html
+++ b/schedule.html
@@ -28,7 +28,7 @@
 		<li class="active"><a href="./Tests.html">Tests</a><li> 
 		<li class="active"><a href="./Portfolio.html">Portfolio</a><li> 
 		<li class="active"><a href="./Project.html">Project</a><li> 
-		<li class="active"><a href="./Links.html">Links</a></li>
+		<li class="active"><a href="./links.html">Links</a></li>
 	</ul>
 </div>		
 
@@ -182,7 +182,7 @@
 
 
 <footer>	
-<small><i>&copy; 2021 LongFox Heavy Industries</i><small>
+<p><i>&copy; 2021 LongFox Heavy Industries</i></p>
 
 <p id="demo"></p>
 
