--- a/schedule.html
+++ b/schedule.html
@@ -21,14 +21,14 @@
 
 <div class="container">
 	<ul class="nav nav-pills">
-		<li class="active"><a href="./home.html">Home</a><li> 
-		<li class="active"><a href="./syllabus.html">Syllabus</a><li> 
-		<li class="active"><a href="./schedule.html">Schedule</a><li> 
-		<li class="active"><a href="./Homework.html">Homework</a><li> 
-		<li class="active"><a href="./Tests.html">Tests</a><li> 
-		<li class="active"><a href="./Portfolio.html">Portfolio</a><li> 
-		<li class="active"><a href="./Project.html">Project</a><li> 
-		<li class="active"><a href="./links.html">Links</a></li>
+		<li class="active"><a href="./home.html">Home&nbsp;</a><li> 
+		<li class="active"><a href="./syllabus.html">Syllabus&nbsp;</a><li> 
+		<li class="active"><a href="./schedule.html">Schedule&nbsp;</a><li> 
+		<li class="active"><a href="./Homework.html">Homework&nbsp;</a><li> 
+		<li class="active"><a href="./Tests.html">Tests&nbsp;</a><li> 
+		<li class="active"><a href="./Portfolio.html">Portfolio&nbsp;</a><li> 
+		<li class="active"><a href="./Project.html">Project&nbsp;</a><li> 
+		<li class="active"><a href="./links.html">Links&nbsp;</a></li>
 	</ul>
 </div>		
 
