--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
 <a href="./Tests.html">Tests</a> &nbsp; 
 <a href="./Portfolio.html">Portfolio</a> &nbsp; 
 <a href="./Project.html">Project</a> &nbsp; 
-<a href="./Links.html">Links</a></p></p>
+<a href="./links.html">Links</a></p></p>
 </nav>
 			
 <main>
