--- a/portfolio.html
+++ b/portfolio.html
@@ -69,7 +69,7 @@
 </main>
 
 <footer>	
-<small><i>&copy; 2021 Fox-Long Heavy Industries</i><small>
+<p><i>&copy; 2021 Fox-Long Heavy Industries</i></p>
 </footer>
 		
 </body>
