--- a/links.html
+++ b/links.html
@@ -50,7 +50,7 @@ p {
 <a href="./Tests.html">Tests</a> &nbsp; 
 <a href="./Portfolio.html">Portfolio</a> &nbsp; 
 <a href="./Project.html">Project</a> &nbsp; 
-<a href="./Links.html">Links</a></p></p>
+<a href="./links.html">Links</a></p></p>
 </nav>
 			
 <main>
@@ -117,7 +117,7 @@ p {
 </main>
 
 <footer>	
-<small><i>&copy; 2021 Fox-Long Heavy Industries</i><small>
+<p><i>&copy; 2021 Fox-Long Heavy Industries</i></p>
 </footer>
 
 </body>
