--- a/Project.html
+++ b/Project.html
@@ -21,9 +21,9 @@
 <a href="./schedule.html">Schedule</a> &nbsp; 
 <a href="./Homework.html">Homework</a> &nbsp; 
 <a href="./Tests.html">Tests</a> &nbsp; 
-<a href="./Portfolio.html">Portfolio</a> &nbsp; 
+<a href="./portfolio.html">Portfolio</a> &nbsp; 
 <a href="./Project.html">Project</a> &nbsp; 
-<a href="./Links.html">links</a></p>
+<a href="./links.html">links</a></p>
 </nav>
 			
 <main>
