--- a/Project.html
+++ b/Project.html
@@ -23,7 +23,7 @@
 <a href="./Tests.html">Tests</a> &nbsp; 
 <a href="./portfolio.html">Portfolio</a> &nbsp; 
 <a href="./Project.html">Project</a> &nbsp; 
-<a href="./links.html">links</a></p>
+<a href="./links.html">Links</a></p>
 </nav>
 			
 <main>
