--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
 </header>
 
 <nav>
-<<p style="text-align: center;">
+<p style="text-align: center;">
 <a href="./home.html">Home</a> &nbsp; 
 <a href="./syllabus.html">Syllabus</a> &nbsp; 
 <a href="./schedule.html">Schedule</a> &nbsp; 
