--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
 <a href="./schedule.html">Schedule</a> &nbsp; 
 <a href="./Homework.html">Homework</a> &nbsp; 
 <a href="./Tests.html">Tests</a> &nbsp; 
-<a href="./Portfolio.html">Portfolio</a> &nbsp; 
+<a href="./portfolio.html">Portfolio</a> &nbsp; 
 <a href="./Project.html">Project</a> &nbsp; 
 <a href="./links.html">Links</a></p></p>
 </nav>
