--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
 <a href="./syllabus.html">Syllabus</a> &nbsp; <a href="./schedule.html">Schedule</a> &nbsp; 
 <a href="./Homework.html">Homework</a> &nbsp; <a href="./Tests.html">Tests</a> &nbsp; 
 <a href="./Portfolio.html">Portfolio</a> &nbsp; <a href="./Project.html">Project</a> &nbsp; 
-<a href="./Links.html">Links</a></p>
+<a href="./links.html">Links</a></p>
 </nav>
 
 <main>		
