--- a/Homework.html
+++ b/Homework.html
@@ -50,7 +50,7 @@
 </main>
 	
 <footer>	
-<p style="text-align: center;"><i>&copy; 2021 Fox-Long Heavy Industries</i></p>
+<p style="text-align: center;"><em>&copy; 2021 Fox-Long Heavy Industries</em></p>
 </footer>
 
 </body>
