--- a/Project.html
+++ b/Project.html
@@ -21,7 +21,7 @@
 <a href="./schedule.html">Schedule</a> &nbsp; 
 <a href="./Homework.html">Homework</a> &nbsp; 
 <a href="./Tests.html">Tests</a> &nbsp; 
-<a href="./portfolio.html">Portfolio</a> &nbsp; 
+<a href="./Portfolio.html">Portfolio</a> &nbsp; 
 <a href="./Project.html">Project</a> &nbsp; 
 <a href="./links.html">Links</a></p>
 </nav>
@@ -86,7 +86,7 @@
 </main>
 
 <footer>	
-<p><i>&copy; 2021 Fox-Long Heavy Industries</i></p>
+<p><em>&copy; 2021 Fox-Long Heavy Industries</em></p>
 </footer>
 	
 </body>
