--- a/Tests.html
+++ b/Tests.html
@@ -23,7 +23,7 @@
 <a href="./Tests.html">Tests</a> &nbsp; 
 <a href="./Portfolio.html">Portfolio</a> &nbsp; 
 <a href="./Project.html">Project</a> &nbsp; 
-<a href="./Links.html">Links</a></p></p>
+<a href="./Links.html">Links</a></p>
 </nav>
 
 <main>
@@ -50,7 +50,7 @@
 </main>
 
 <footer>	
-<p style="text-align: center;"><i>&copy; 2021 Fox-Long Heavy Industries</i><p>
+<p style="text-align: center;"><em>&copy; 2021 Fox-Long Heavy Industries</em><p>
 </footer>
 
 </body>
