--- a/home.html
+++ b/home.html
@@ -14,27 +14,32 @@
 </header>
 
 <nav>
-<p style="text-align: center;"><a href="./home.html">Home</a> &nbsp; 
-<a href="./syllabus.html">Syllabus</a> &nbsp; <a href="./schedule.html">Schedule</a> &nbsp; 
-<a href="./Homework.html">Homework</a> &nbsp; <a href="./Tests.html">Tests</a> &nbsp; 
-<a href="./Portfolio.html">Portfolio</a> &nbsp; <a href="./Project.html">Project</a> &nbsp; 
-<a href="./links.html">Links</a></p>
+<p style="text-align: center;">
+<a href="./home.html">Home</a> &nbsp; 
+<a href="./syllabus.html">Syllabus</a> &nbsp; 
+<a href="./schedule.html">Schedule</a> &nbsp; 
+<a href="./Homework.html">Homework</a> &nbsp; 
+<a href="./Tests.html">Tests</a> &nbsp; 
+<a href="./Portfolio.html">Portfolio</a> &nbsp; 
+<a href="./Project.html">Project</a> &nbsp; 
+<a href="./Links.html">Links</a></p>
+
 </nav>
 
 <main>		
 <h2 style="text-align: center;">Instructor: Paul Long</h2>
 	<p>&nbsp;</p>
-<h2 style="text-align: center;">Office:</h2>
+<h2 style="text-align: center;">Office: </h2>
 	<p>&nbsp;</p>
-<h2 style="text-align: center;">E-mail: <a href="mailto:paul.long@northgateh.edu">
+<h2 style="text-align: center;">E-mail: <a href="mailto:paul.long@ngtcollege.org">
         paul.long@northgatech.edu</a> </h2>
 	<p>&nbsp;</p>
-<h2 style="text-align: center;">Phone:</h2>	
+<h2 style="text-align: center;">Phone: </h2>	
 <p>&nbsp;</p>	
 </main>
 
 <footer>	
-<p style="text-align: center;"><i>&copy; 2021 Fox-Long Heavy Industries</i></p>
+<p style="text-align: center;"><em>&copy; 2021 Fox-Long Heavy Industries</em></p>
 </footer>
 </body> 
 </html>
