--- a/links.html
+++ b/links.html
@@ -6,7 +6,7 @@
 <title>1510 Links</title>
 <link rel="stylesheet" href="color.css" type="text/css" />
 <link rel="shortcut icon" href="favicon.ico" />
-<style type="text/css">
+<style>
 
 h2 {
 	text-align: center;
@@ -50,7 +50,7 @@ p {
 <a href="./Tests.html">Tests</a> &nbsp; 
 <a href="./Portfolio.html">Portfolio</a> &nbsp; 
 <a href="./Project.html">Project</a> &nbsp; 
-<a href="./links.html">Links</a></p></p>
+<a href="./Links.html">Links</a></p>
 </nav>
 			
 <main>
@@ -59,7 +59,7 @@ p {
   <td>
 <h2 style="text-align: center; font-size:20px; background-color: #AEAED4; color: #191970;">
 	Here are some useful links for CIST 1510</h2>
-	<p><a href = "./notes_1510.docx">notes for class</a></p>
+	<p><a href = "./notes_1510.docx">Notes for class</a></p>
 	<p><a href = "./html_template_2.html">Template</a></p>
 	<p><a href = "https://www.image-map.net/">Image Map Generator</a></p>
 	<p><a href = "https://validator.w3.org/">HTML Validator</a></p>
@@ -117,7 +117,7 @@ p {
 </main>
 
 <footer>	
-<p><i>&copy; 2021 Fox-Long Heavy Industries</i></p>
+<p><em>&copy; 2021 Fox-Long Heavy Industries</em></p>
 </footer>
 
 </body>
