--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
 <body>
 
 <header>
-<h1 style="text-align: center;">Portfolio CIST 1510</h1>
+<h1 style="text-align: center;">Portfolio for CIST 1510</h1>
 </header>
 
 <nav>
@@ -21,9 +21,9 @@
 <a href="./schedule.html">Schedule</a> &nbsp; 
 <a href="./Homework.html">Homework</a> &nbsp; 
 <a href="./Tests.html">Tests</a> &nbsp; 
-<a href="./portfolio.html">Portfolio</a> &nbsp; 
+<a href="./Portfolio.html">Portfolio</a> &nbsp; 
 <a href="./Project.html">Project</a> &nbsp; 
-<a href="./links.html">Links</a></p></p>
+<a href="./Links.html">Links</a></p>
 </nav>
 			
 <main>
@@ -69,7 +69,7 @@
 </main>
 
 <footer>	
-<p><i>&copy; 2021 Fox-Long Heavy Industries</i></p>
+<p><em>&copy; 2021 Fox-Long Heavy Industries</em></p>
 </footer>
 		
 </body>
