--- a/syllabus.html
+++ b/syllabus.html
@@ -11,15 +11,19 @@
 <body>
 
 <header>
-<h1 style="text-align: center;">Welcome to CIST 1510</h1>
+<p1 style="text-align: center;">Syllabus for CIST 1510</p1>
 </header>
 
 <nav>
-<p style="text-align: center;"><a href="./home.html">Home</a> &nbsp; 
-<a href="./syllabus.html">Syllabus</a> &nbsp; <a href="./schedule.html">Schedule</a> &nbsp; 
-<a href="./Homework.html">Homework</a> &nbsp; <a href="./Tests.html">Tests</a> &nbsp; 
-<a href="./Portfolio.html">Portfolio</a> &nbsp; <a href="./Project.html">Project</a> &nbsp; 
-<a href="./links.html">Links</a></p>
+<p style="text-align: center;">
+<a href="./home.html">Home</a> &nbsp; 
+<a href="./syllabus.html">Syllabus</a> &nbsp; 
+<a href="./schedule.html">Schedule</a> &nbsp; 
+<a href="./Homework.html">Homework</a> &nbsp; 
+<a href="./Tests.html">Tests</a> &nbsp; 
+<a href="./Portfolio.html">Portfolio</a> &nbsp; 
+<a href="./Project.html">Project</a> &nbsp; 
+<a href="./Links.html">Links</a></p>
 </nav>
 			
 <main>
@@ -37,7 +41,7 @@ You are encouraged to stop by if you need assistance with any issues or just to 
 <p><img src="images/Parker_Nellis_Map.png" style="width:800px; height:607px;" 
 alt="NGTC Clarkesville Campus map showing Parker Nellis location"></p>
 
-<h2>COURSE SYLLABUS</h2>
+<h3>COURSE SYLLABUS</h3>
 
 <h4>Course Description (from the NGTC Catalog)</h4>
 	<p>Explores the concepts of Hypertext Markup Language (HTML), Cascading Style Sheets (CSS), XML, and 
@@ -287,7 +291,7 @@ No extra credit will be given unless all course work is turned in to the Instruc
 	  </tr>
 	  <tr>
 		<td><div style= "text-align:center">Class/Home work</div></td>
-		<td><div style= "text-align:center">50&#37;</div></td>
+		<td><div style= "text-align:center">30&#37;</div></td>
 	  </tr>
 	  <tr>
 		<td><div style= "text-align:center">Class/Lab Participation</div></td>
@@ -329,8 +333,8 @@ class participation must reflect that you have done the required readings and th
 what you read. Simply talking in class is not enough to get a good grade under this evaluation component.
 But, if you do not talk and participate in class, you will not receive any credit at all. Please note that the
 written assignments and quizzes are conceived to help you prepare to talk in class and fully
-participate in the class activities. <b>You will not get a passing grade under class participation if you only
-do the written assignments but do not contribute to class discussions and class activities.</b> I expect that
+participate in the class activities. <strong>You will not get a passing grade under class participation if you only
+do the written assignments but do not contribute to class discussions and class activities.</strong> I expect that
 active class participation will foster, among many other skills, your oral communication and presentation
 skills. Class attendance is a prerequisite to obtain the corresponding percentage of the grade under this
 category. I will evaluate your participation every class. If you miss class you will not receive any kind of
@@ -404,13 +408,13 @@ your first quarter as a student. Be sure to view the
 <p><a href = "./files/Revised-Medical-Certification-010621.pdf">Medical-Certification</a></p>
 
 <p><a href = "./files/Syllabus_Quiz.docx">Syllabus Quiz</a></p>
-	
+
 <p><mark>Syllabus is subject to change without notice!</mark></p>
 <p>&nbsp;</p>
 </main>	
 
 <footer>	
-<i>&copy; 2021 LongFox Heavy Industries</i>
+<em>&copy; 2021 Fox-Long Heavy Industries</em>
 </footer>	
 </body>
 </html>
