--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
 <a href="./Tests.html">Tests</a> &nbsp; 
 <a href="./Portfolio.html">Portfolio</a> &nbsp; 
 <a href="./Project.html">Project</a> &nbsp; 
-<a href="./Links.html">Links</a></p>
+<a href="./Links.html">links</a></p>
 
 </nav>
 
