--- a/schedule.html
+++ b/schedule.html
@@ -59,7 +59,7 @@
 			
 			<tr class="warning">
 				<td>Week 2</td>
-				<td><strong>HTML Introduction, Editors, Basics, Elements, Attributes</strong></td>
+				<td><strong>HTML Introduction, Editors, Basics<span style="color:#B20000;">&#40;HW&#41;</span>, Elements, Attributes</strong></td>
 					
 				<td>Doctype, HTML Head, Layout, HTML Semantics, HTML Charset</td>
 			</tr>
@@ -72,13 +72,17 @@
 			
 			<tr class="warning">
 				<td>&nbsp;</td>
-				<td><strong>HTML Elements, Attributes, Headings, Paragraphs</strong></td>
+				<td><strong>HTML Elements, Attributes<span style="color:#B20000;">&#40;HW&#41;</span>, 
+				Headings<span style="color:#B20000;">&#40;HW&#41;</span>, 
+				Paragraphs<span style="color:#B20000;">&#40;HW&#41;</span></strong></td>
 				<td>Tags, href, src, headings, paragraphs</td>
 			</tr>
 			
 			<tr class="success">
 				<td>Week 3</td>
-				<td><strong>HTML Formatting, Quotations, Comments</strong></td>
+				<td><strong>HTML Formatting<span style="color:#B20000;">&#40;HW&#41;</span>, 
+				Quotations<span style="color:#B20000;">&#40;HW&#41;</span>, 
+				Comments<span style="color:#B20000;">&#40;HW&#41;</span></strong></td>
 				<td>b, em, sub, sup, blockquote, address, cite, bdo, Where to place comments.</td>
 			</tr>
 						
