--- a/links.html
+++ b/links.html
@@ -59,7 +59,7 @@ p {
   <td>
 <h2 style="text-align: center; font-size:20px; background-color: #AEAED4; color: #191970;">
 	Here are some useful links for CIST 1510</h2>
-	<p><a href = "./notes_1510.docx">Notes for class</a></p>
+	<p><a href = "./notes_1510.html">Notes for class</a></p>
 	<p><a href = "./html_template_2.html">Template</a></p>
 	<p><a href = "https://www.image-map.net/">Image Map Generator</a></p>
 	<p><a href = "https://validator.w3.org/">HTML Validator</a></p>
