--- a/schedule.html
+++ b/schedule.html
@@ -3,11 +3,12 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="./css/bootstrap.min.css">  
-	<!-- <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"> -->
+<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+	<!-- <link rel="stylesheet" href="./css/bootstrap.min.css"> -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-	<!--  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script> -->
-<script src="./js/bootstrap.min.js"></script>
+<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+	<!--  <script src="./js/bootstrap.min.js"></script> -->
+
 <script>
 .panel-footer {
     background-color: #337ab7;
@@ -61,7 +62,7 @@
 			
 			<tr class="warning">
 				<td>Week 2</td>
-				<td><strong>HTML Introduction, Editors, Basics<span style="color:#B20000;">&#40;HW&#41;</span>, Elements, Attributes</strong></td>
+				<td><strong>HTML Introduction, Editors, Basics<span style="color:#B20000;">&#40;HW&#41;</span></strong></td>
 					
 				<td>Doctype, HTML Head, Layout, HTML Semantics, HTML Charset</td>
 			</tr>
@@ -90,7 +91,9 @@
 						
 			<tr class="warning">
 				<td>Week 4</td>
-				<td><strong>HTML Colors, CSS, Links, Images, Tables, Lists</strong></td>
+				<td><strong>HTML Colors<span style="color:#B20000;">&#40;HW&#41;</span>, 
+				CSS<span style="color:#B20000;">&#40;HW&#41;</span>, 
+				Links<span style="color:#B20000;">&#40;HW&#41;</span>, Images, Tables, Lists</strong></td>
 				<td>a href ="url",Image as a link, img src="" alt="", image size width height, 
 				Images in another folder</td>
 			</tr>
