--- a/schedule.html
+++ b/schedule.html
@@ -100,38 +100,41 @@
 			
 			<tr class="warning">
 				<td>&nbsp;</td>
-				<td><strong>HTML Tables, Lists</strong></td>
+				<td><strong>HTML Tables<span style="color:#B20000;">&#40;HW&#41;</span>, 
+				Lists<span style="color:#B20000;">&#40;HW&#41;</span></strong></td>
 				<td>table, tr, td, th,border(CSS), Cell padding(CSS), 
 				unordered(ul), ordered(ol)</td>
 			</tr>
 			
 			<tr class="success">
 				<td>Week 5</td>
-				<td><strong>HTML Block & Inline Elements</strong></td> 
+				<td><strong>HTML Block & Inline Elements<span style="color:#B20000;">&#40;HW&#41;</span></strong></td> 
 				<td>div, figure, footer, header, main, nav, section, span</td>
 			</tr>
 			
 			<tr class="success">
 				<td>&nbsp;</td>
-				<td><strong>HTML Classes, Id</strong></td>
+				<td><strong>HTML Classes<span style="color:#B20000;">&#40;HW&#41;</span>, 
+				Id</strong><span style="color:#B20000;">&#40;HW&#41;</span></td>
 				<td>&nbsp;</td>
 			</tr>
 			
 			<tr class="warning">
 				<td>Week 6</td>
-				<td><strong>HTML JavaScript</strong></td>
+				<td><strong>HTML JavaScript<span style="color:#B20000;">&#40;HW&#41;</span></strong></td>
 				<td>document.getElementById("demo").innerHTML =""</td>
 			</tr>
 			
 			<tr class="success">
 				<td>Week 7</td>
-				<td><strong>HTML Responsive</strong></td>
+				<td><strong>HTML Responsive<span style="color:#B20000;">&#40;HW&#41;</span></strong></td>
 				<td>viewpoint, images</td>
 			</tr>
 			
 			<tr class="warning">
 				<td>Week 8</td>
-				<td><strong>HTML Entities, Symbols</strong></td>
+				<td><strong>HTML Entities<span style="color:#B20000;">&#40;HW&#41;</span>, 
+				Symbols<span style="color:#B20000;">&#40;HW&#41;</span></strong></td>
 				<td>Non-breaking Space &nbsp; Character Entities,
 				other entities supported by HTML</td>
 			</tr>
