--- a/schedule.html
+++ b/schedule.html
@@ -114,8 +114,8 @@
 			
 			<tr class="success">
 				<td>&nbsp;</td>
-				<td><strong>HTML Classes<span style="color:#B20000;">&#40;HW&#41;</span></strong></td>
-					<strong>ID<span style="color:#B20000;">&#40;HW&#41;</span><strong></td>
+				<td><strong>HTML Classes<span style="color:#B20000;">&#40;HW&#41;</span>,
+				ID<span style="color:#B20000;">&#40;HW&#41;</span></strong></td>
 				<td>&nbsp;</td>
 			</tr>
 			
