--- a/syllabus.html
+++ b/syllabus.html
@@ -210,6 +210,7 @@ refer to the Student Handbook for further information regarding the "Drop" Polic
 for a warning and termination are as follows:</p>
 	   
 <table class="table2" style="width:50%; border:1px solid black;">
+<caption><strong>Attendance</strong></caption>
 <tr>
 <td style="width:34%; border:1px solid black;"><strong>Class Meeting Per Week</strong></td>
 <td style="width:33%; border:1px solid black;"><strong>Absences Before Warning</strong></td>
@@ -285,13 +286,14 @@ No extra credit will be given unless all course work is turned in to the Instruc
 <p>This course is not self paced so you can achieve an "<strong>A</strong>" as long as your work is turned in in a timely manner.</p> 
 
 	<table>
+	<caption><strong>Grading</strong></caption>
 	  <tr>
 		<td><div style= "text-align:center">Final Project</div></td>
-		<td><div style= "text-align:center">40&#37;</div></td>
+		<td><div style= "text-align:center">50&#37;</div></td>
 	  </tr>
 	  <tr>
 		<td><div style= "text-align:center">Class/Home work</div></td>
-		<td><div style= "text-align:center">30&#37;</div></td>
+		<td><div style= "text-align:center">40&#37;</div></td>
 	  </tr>
 	  <tr>
 		<td><div style= "text-align:center">Class/Lab Participation</div></td>
