--- a/schedule.html
+++ b/schedule.html
@@ -138,6 +138,13 @@
 				<td>Non-breaking Space &nbsp; Character Entities,
 				other entities supported by HTML</td>
 			</tr>
+	  
+	  		<tr class="warning">
+				<td>&nbsp;</td>
+				<td><strong>HTML Forms<span style="color:#B20000;">&#40;HW&#41;</span>, 
+				Media<span style="color:#B20000;">&#40;HW&#41;</span></strong></td>
+				<td>Form stuff, Audio, Video</td>
+			</tr>
 			
 			<tr class="success">
 				<td>Week 9</td>
