--- a/schedule.html
+++ b/schedule.html
@@ -155,7 +155,7 @@
 			<tr class="success"><span style="color:#B20000;">&#40;HW&#41;</span>
 				<td>&nbsp;</td>
 				<td><strong>CSS Introduction, Syntax<span style="color:#B20000;">&#40;HW&#41;</span>, 
-					<span style="color:#B20000;">&#40;HW&#41;</span>How To</strong></td>
+					How To<span style="color:#B20000;">&#40;HW&#41;</span></strong></td>
 				<td>3 Ways to insert CSS, Cascading Order</td>
 				
 			</tr>
