--- a/schedule.html
+++ b/schedule.html
@@ -163,7 +163,7 @@
 			<tr class="warning">
 				<td>Week 10</td>
 				<td><strong>CSS Comments, Colors<span style="color:#B20000;">&#40;HW&#41;</span>, 
-					<span style="color:#B20000;">&#40;HW&#41;</span>Backgrounds</strong></td>
+					Backgrounds<span style="color:#B20000;">&#40;HW&#41;</span></strong></td>
 				<td>/* This is a CSS comment */, 
 				Color names, values,
 				background-color, opacity/transparency</td>
